--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "projeto-final-real-real",
   "private": true,
   "dependencies": {
+    "@nathanvda/cocoon": "^1.2.14",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "bootstrap-autocomplete": "^2.3.7",
     "channels": "^0.0.4",
+    "cocoon": "github:nathanvda/cocoon#c24ba53",
     "jquery": "^3.6.0",
     "jquery-ujs": "^1.2.3",
     "stimulus-autocomplete": "^3.0.2",
