--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap-autocomplete": "^2.3.7",
     "channels": "^0.0.4",
     "cocoon": "github:nathanvda/cocoon#c24ba53",
+    "easy-autocomplete": "^1.3.5",
     "jquery": "^3.6.0",
     "jquery-ujs": "^1.2.3",
     "stimulus-autocomplete": "^3.0.2",
